<?xml version="1.0" encoding="utf-8"?>
<!--Author: Laura Stewart -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/bgColor"
    tools:context=".CreateAccountActivity">

    <ImageView
        android:id="@+id/imgHippoCreateAccount"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hippo" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:paddingVertical="15dp"
        android:paddingHorizontal="20dp"
        android:orientation="vertical"
        android:background="?attr/bgColorLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgHippoCreateAccount">

        <EditText
            android:id="@+id/editTextUsernameCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/textColor"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:textSize="16sp"
            android:textColor="?attr/textColor"
            android:textColorHint="?attr/metaTextColor" />

        <EditText
            android:id="@+id/editTextCreatePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/textColor"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:textColor="?attr/textColor"
            android:textColorHint="?attr/metaTextColor" />

        <EditText
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/textColor"
            android:ems="10"
            android:hint="confirm password"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:textColor="?attr/textColor"
            android:textColorHint="?attr/metaTextColor" />

        <Button
            android:id="@+id/btnConfirmCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/create_account"
            android:textColor="?attr/textColor" />

        <Button
            android:id="@+id/btnCancelCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorDarkBtn"
            android:text="@string/cancel"
            android:textColor="?attr/textColor" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>